--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
-    <video src="https://www.youtube.com/watch?v=PcdBQjxZKxE&list=PLQlnTldJs0ZRvu1u-KtBZefpqYP4Br43L" controls="true"></video>
+    <video
+      src="https://www.youtube.com/watch?v=PcdBQjxZKxE&list=PLQlnTldJs0ZRvu1u-KtBZefpqYP4Br43L"
+      controls="true"
+    ></video>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
