--- a/index.html
+++ b/index.html
@@ -13,19 +13,40 @@
     />
   </head>
   <body>
-    <nav class="navbar bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg text-bg-success">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
-            src="/assets/animalsclogo.png"
+            src="./assets/animalsclogo.png"
             alt="Logo"
             width="30"
             height="24"
             class="d-inline-block align-text-top"
           />
-          Bootstrap
         </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link disabled">Disabled</a>
+          </div>
+        </div>
       </div>
     </nav>
+    <!-- <section>
+      <video src="https://www.youtube.com/watch?v=7TavVZMewpY&list=PLQlnTldJs0ZR3_z5Kap0iecYoP1g39jPZ" class="object-fit-contain" autoplay></video>
+    </section> -->
   </body>
 </html>
