--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     />
   </head>
   <body>
+    <audio autoplay>
+      <source src="assets/birds_sound.mp3" type="audio/mpeg" />
+      Your browser does not support the audio element.
+    </audio>
     <nav class="navbar navbar-expand-lg text-bg-success">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
-            src="./assets/animalsclogo.png"
+            src="assets/animalsclogo.png"
             alt="Logo"
             width="30"
             height="24"
@@ -45,8 +49,13 @@
         </div>
       </div>
     </nav>
-    <!-- <section>
-      <video src="https://www.youtube.com/watch?v=7TavVZMewpY&list=PLQlnTldJs0ZR3_z5Kap0iecYoP1g39jPZ" class="object-fit-contain" autoplay></video>
-    </section> -->
+    <section>
+      <video
+        src="https://www.petanikode.com/img/html-video/cat-herd.webm"
+        loop
+        controls
+        autoplay
+      ></video>
+    </section>
   </body>
 </html>
