--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     />
   </head>
   <body>
-    <audio autoplay>
+    <audio controls autoplay loop>
+      <source src="assets/birds_sound.ogg" type="audio/ogg" />
       <source src="assets/birds_sound.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
