--- a/index.html
+++ b/index.html
@@ -11,52 +11,188 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body>
-    <audio controls autoplay loop>
+  <body
+    style="
+      font-family: GeoBrandBold, CenturyGothic, AppleGothic, Gill Sans,
+        Gill Sans MT, sans-serif;
+    "
+  >
+    <audio controls autoplay muted class="w-100" style="background: #008900">
       <source src="assets/birds_sound.ogg" type="audio/ogg" />
       <source src="assets/birds_sound.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
-    <nav class="navbar navbar-expand-lg text-bg-success">
+
+    <nav
+      class="navbar navbar-expand-xl text-bg-success h-75"
+      style="background: linear-gradient(#00a900, #008900); margin-top: -5px"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
             src="assets/animalsclogo.png"
             alt="Logo"
-            width="30"
-            height="24"
+            width="80"
+            height="74"
             class="d-inline-block align-text-top"
           />
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link disabled">Disabled</a>
-          </div>
-        </div>
+        <ul class="nav justify-content-center gap-4">
+          <li class="nav-item">
+            <a
+              class="nav-link active text-center text-light fw-bolder"
+              style="font-size: 1.125rem"
+              aria-current="page"
+              href="#"
+            >
+              <i class="fa-solid fa-circle-play fa-xl my-4"></i><br />
+              VIDEOS</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link text-center text-light fw-bolder"
+              style="font-size: 1.125rem"
+              href="#"
+            >
+              <i class="fa-solid fa-newspaper fa-xl my-4"></i><br />
+              ARTICLE</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link text-center text-light fw-bolder"
+              style="font-size: 1.125rem"
+              href="#"
+            >
+              <i class="fa-solid fa-compress fa-xl my-4"></i><br />
+              EXPLORE MORE</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link text-center fw-bolder"
+              style="font-size: 1.125rem; color: #fc0"
+            >
+              <i class="fa-solid fa-pen-to-square fa-xl my-4"></i><br />
+              SUBSCRIBE</a
+            >
+          </li>
+        </ul>
+        <div></div>
       </div>
     </nav>
-    <section>
-      <video
-        src="https://www.petanikode.com/img/html-video/cat-herd.webm"
-        loop
-        controls
-        autoplay
-      ></video>
+    <section
+      class="border w-100"
+      style="background-color: #000; min-width: 100%; position: relative"
+    >
+      <div style="height: 100%; position: absolute; width: 100%; z-index: 0">
+        <div
+          style="
+            display: block;
+            height: 100%;
+            overflow: hidden;
+            position: relative;
+          "
+        >
+          <div
+            style="padding-bottom: 56.26%; overflow: hidden; position: relative"
+          ></div>
+          <span
+            style="
+              filter: blur();
+              transform: scale(1, 1);
+              background-repeat: no-repeat;
+              background-size: cover;
+              bottom: 0;
+              height: 100%;
+              left: 0;
+              position: absolute;
+              right: 0;
+              top: 0;
+              background-position: left center;
+              transition: transform 0.25s ease 0s, opacity 0.5s ease 0s;
+              background-image: url('https://i.natgeofe.com/k/47fe7b95-4879-42fc-9acb-9fe39e4c91d6/yellowtheme.jpg?w=767&h=431');
+            "
+          ></span>
+          <span
+            style="
+              opacity: 1;
+              filter: blur();
+              transform: scale(1, 1);
+              background-repeat: no-repeat;
+              background-size: cover;
+              bottom: 0;
+              height: 100%;
+              left: 0;
+              position: absolute;
+              right: 0;
+              top: 0;
+              background-position: left center;
+              transition: transform 0.25s ease 0s, opacity 0.5s ease 0s;
+              background-image: url('https://i.natgeofe.com/k/47fe7b95-4879-42fc-9acb-9fe39e4c91d6/yellowtheme.jpg?w=767&h=431');
+            "
+          ></span>
+          <div
+            style="
+              background-color: #000;
+              opacity: 0.1;
+              bottom: 0;
+              display: block;
+              left: 0;
+              position: absolute;
+              right: 0;
+              top: 0;
+              z-index: 1;
+            "
+          ></div>
+        </div>
+      </div>
+      <div
+        style="
+          margin: 0;
+          padding: 16px 16px 60px;
+          position: relative;
+          width: 100%;
+        "
+      >
+        <div
+          style="padding-bottom: 56.26%; overflow: hidden; position: relative"
+        >
+          <video
+            src="https://www.petanikode.com/img/html-video/cat-herd.webm"
+            loop
+            class="w-75 h-75"
+            controls
+            autoplay
+            style="
+              opacity: 1;
+              /* pointer-events: none; */
+              transition: opacity 0.5s ease-in 0s;
+              z-index: 2;
+              border: none;
+              height: 100%;
+              width: 100%;
+              bottom: 0;
+              left: 0;
+              right: 0;
+              top: 0;
+              position: absolute;
+              display: block;
+              margin: 0 auto;
+              max-width: 100%;
+            "
+          ></video>
+        </div>
+      </div>
     </section>
   </body>
 </html>
