--- a/Mengenal Fauna.html
+++ b/Mengenal Fauna.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="styles.css">
   <title>Mengenal Fauna</title>
-</head>
+    <link rel="stylesheet" href="styles/gaya-persebranfauanadunia.css">
+  </head>
 <body>
   <div class="container">
     <img class="article-image" src="assets/images/banner web fauna.jpg" alt="Fauna">
