--- a/more-videos.html
+++ b/more-videos.html
@@ -153,7 +153,7 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-
+    <script src="js/carousel-multiple-items.js"></script>
     <script>
       function btnClick(idVideo) {
             // Post a message to the parent (index.html)
