add: team profile

--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
     ></script>
   </head>
 
+  <!-- 
+    Nama: Rendy Ardian Panca Putra,
+    NIM: 220401010282, 
+    Kelas: IT203, 
+    Nama Matakuliah:  Pemograman Web I
+  -->
+
+  <!-- 
+    Nama: Muhammad Riyadi,
+    NIM: 220401010069, 
+    Kelas: IT203, 
+    Nama Matakuliah:  Pemograman Web I
+  -->
+
+  <!-- 
+    Nama: Muhammad,
+    NIM: 220401010194, 
+    Kelas: IT203, 
+    Nama Matakuliah:  Pemograman Web I
+  -->
+
   <body>
     <div class="w-100" style="background: #008900">
       <audio controls autoplay muted class="w-25" style="background: #008900">
